@@ -6,6 +6,8 @@
    Code:
    * Ported to FreeBSD, getdelim.c was added for that.
      Also test compiled it on Mac OS X with Fink.
+   * Signal handling for SIGPIPE and SIGINT was implemented,
+     we now print an error when receiving such a signal.
 
 
 18 Jan 2006: 0.1.3 Miek <miek@miek.nl>
